--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,11 @@
-cmake_minimum_required(VERSION 3.20.0)
+cmake_minimum_required(VERSION 3.16.3)
 
-project(BinMerge)
-
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_EXTENSIONS ON)
-set(CMAKE_C_STANDARD_REQUIRED TRUE)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_EXTENSIONS ON)
-set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-
-set(CMAKE_VERBOSE_MAKEFILE OFF)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-add_executable(BinMerge
-    main.cc
-)
-
-target_include_directories(BinMerge 
-    PUBLIC 
-        ${CMAKE_CURRENT_LIST_DIR})
-
+project(MergeLidar)
 set(CMAKE_BUILD_TYPE Debug)
 
-target_compile_options(BinMerge 
-    PRIVATE 
-        -g -Wall -Wextra -Werror 
-        -Wno-error=missing-field-initializers
-        -Wno-error=write-strings)
+add_subdirectory(BinMerge)
 
-if(EXISTS ${CMAKE_BINARY_DIR}/compile_commands.json)
-    configure_file(
-        ${CMAKE_BINARY_DIR}/compile_commands.json
-        ${CMAKE_SOURCE_DIR}/compile_commands.json
-        COPYONLY)
-endif()
+add_subdirectory(Qt)
+add_executable(${PROJECT_NAME} main.cc)
+
+target_link_libraries("${PROJECT_NAME}" PUBLIC BinMerge mergebin_qt)
